// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<message> <footer> parses BREAKING CHANGE literal as <token> 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 16,
                      "line": 2,
                      "offset": 38,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 2,
                      "offset": 23,
                    },
                  },
                  "type": "breaking-change",
                  "value": "BREAKING CHANGE",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 16,
                  "line": 2,
                  "offset": 38,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 23,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 40,
                },
                "start": Object {
                  "column": 16,
                  "line": 2,
                  "offset": 38,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 41,
                      "line": 2,
                      "offset": 63,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 2,
                      "offset": 40,
                    },
                  },
                  "type": "text",
                  "value": "this change is breaking",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 41,
                  "line": 2,
                  "offset": 63,
                },
                "start": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 40,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 41,
              "line": 2,
              "offset": 63,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 23,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 41,
          "line": 2,
          "offset": 63,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 23,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 41,
      "line": 2,
      "offset": 63,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <footer> parses commit summary footer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "chore",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "text",
          "value": "contains multiple commits",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 33,
          "line": 1,
          "offset": 32,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 4,
                      "line": 2,
                      "offset": 36,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 2,
                      "offset": 33,
                    },
                  },
                  "type": "type",
                  "value": "fix",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 11,
                      "line": 2,
                      "offset": 43,
                    },
                    "start": Object {
                      "column": 5,
                      "line": 2,
                      "offset": 37,
                    },
                  },
                  "type": "scope",
                  "value": "parser",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 12,
                  "line": 2,
                  "offset": 44,
                },
                "start": Object {
                  "column": 37,
                  "line": 2,
                  "offset": 69,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 14,
                  "line": 2,
                  "offset": 46,
                },
                "start": Object {
                  "column": 12,
                  "line": 2,
                  "offset": 44,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 37,
                      "line": 2,
                      "offset": 69,
                    },
                    "start": Object {
                      "column": 14,
                      "line": 2,
                      "offset": 46,
                    },
                  },
                  "type": "text",
                  "value": "address bug with parser",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 37,
                  "line": 2,
                  "offset": 69,
                },
                "start": Object {
                  "column": 14,
                  "line": 2,
                  "offset": 46,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 37,
              "line": 2,
              "offset": 69,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 33,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 37,
          "line": 2,
          "offset": 69,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 33,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 37,
      "line": 2,
      "offset": 69,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <footer> parses simple token/separator/value form of footer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 7,
                      "line": 2,
                      "offset": 29,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 2,
                      "offset": 23,
                    },
                  },
                  "type": "type",
                  "value": "Author",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 2,
                  "offset": 29,
                },
                "start": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 40,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 2,
                  "offset": 31,
                },
                "start": Object {
                  "column": 7,
                  "line": 2,
                  "offset": 29,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 18,
                      "line": 2,
                      "offset": 40,
                    },
                    "start": Object {
                      "column": 9,
                      "line": 2,
                      "offset": 31,
                    },
                  },
                  "type": "text",
                  "value": "@byCedric",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 40,
                },
                "start": Object {
                  "column": 9,
                  "line": 2,
                  "offset": 31,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 18,
              "line": 2,
              "offset": 40,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 23,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 18,
          "line": 2,
          "offset": 40,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 23,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 18,
      "line": 2,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <footer> supports multiline BREAKING CHANGES, via continuation 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 16,
                      "line": 2,
                      "offset": 38,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 2,
                      "offset": 23,
                    },
                  },
                  "type": "breaking-change",
                  "value": "BREAKING CHANGE",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 16,
                  "line": 2,
                  "offset": 38,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 23,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 40,
                },
                "start": Object {
                  "column": 16,
                  "line": 2,
                  "offset": 38,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 47,
                      "line": 2,
                      "offset": 69,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 2,
                      "offset": 40,
                    },
                  },
                  "type": "text",
                  "value": "first line of breaking change",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 32,
                          "line": 3,
                          "offset": 101,
                        },
                        "start": Object {
                          "column": 2,
                          "line": 3,
                          "offset": 71,
                        },
                      },
                      "type": "text",
                      "value": "second line of breaking change",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 32,
                      "line": 3,
                      "offset": 101,
                    },
                    "start": Object {
                      "column": 47,
                      "line": 2,
                      "offset": 69,
                    },
                  },
                  "type": "continuation",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 31,
                          "line": 4,
                          "offset": 132,
                        },
                        "start": Object {
                          "column": 2,
                          "line": 4,
                          "offset": 103,
                        },
                      },
                      "type": "text",
                      "value": "third line of breaking change",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 31,
                      "line": 4,
                      "offset": 132,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 3,
                      "offset": 101,
                    },
                  },
                  "type": "continuation",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 31,
                  "line": 4,
                  "offset": 132,
                },
                "start": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 40,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 31,
              "line": 4,
              "offset": 132,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 23,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 31,
          "line": 4,
          "offset": 132,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 23,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 31,
      "line": 4,
      "offset": 132,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses breaking change marker 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "feat",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "breaking-change",
          "value": "!",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "text",
          "value": "add support for scopes",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses breaking change marker 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "feat",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "scope",
          "value": "http parser",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "start": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
          },
          "type": "breaking-change",
          "value": "!",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 43,
              "line": 1,
              "offset": 42,
            },
            "start": Object {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
          },
          "type": "text",
          "value": "add support for scopes",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 43,
          "line": 1,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 43,
      "line": 1,
      "offset": 42,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses summary with no scope 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "a really weird bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses summary with scope 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "feat",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "scope",
          "value": "parser",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": Object {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 37,
              "line": 1,
              "offset": 36,
            },
            "start": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "type": "text",
          "value": "add support for scopes",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 37,
          "line": 1,
          "offset": 36,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 37,
      "line": 1,
      "offset": 36,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary>, <newline>*, <body> allows for multiple newlines between summary and body 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 33,
              "line": 3,
              "offset": 56,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 24,
            },
          },
          "type": "text",
          "value": "this is a free form body of text",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 33,
          "line": 3,
          "offset": 56,
        },
        "start": Object {
          "column": 33,
          "line": 3,
          "offset": 56,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 33,
      "line": 3,
      "offset": 56,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary>, <newline>*, <body> treats multiple newline between body and summary as optional 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 33,
              "line": 2,
              "offset": 55,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 23,
            },
          },
          "type": "text",
          "value": "this is a free form body of text",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 33,
          "line": 2,
          "offset": 55,
        },
        "start": Object {
          "column": 33,
          "line": 2,
          "offset": 55,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 33,
      "line": 2,
      "offset": 55,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> [<text>], <newline>, <footer>* parses footer after body 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 33,
              "line": 3,
              "offset": 56,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 24,
            },
          },
          "type": "text",
          "value": "this is a free form body of text",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 7,
                      "line": 4,
                      "offset": 63,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 4,
                      "offset": 57,
                    },
                  },
                  "type": "type",
                  "value": "Author",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 4,
                  "offset": 63,
                },
                "start": Object {
                  "column": 1,
                  "line": 5,
                  "offset": 71,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 4,
                  "offset": 65,
                },
                "start": Object {
                  "column": 7,
                  "line": 4,
                  "offset": 63,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 14,
                      "line": 4,
                      "offset": 70,
                    },
                    "start": Object {
                      "column": 9,
                      "line": 4,
                      "offset": 65,
                    },
                  },
                  "type": "text",
                  "value": "@bcoe",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 14,
                  "line": 4,
                  "offset": 70,
                },
                "start": Object {
                  "column": 9,
                  "line": 4,
                  "offset": 65,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 71,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 57,
            },
          },
          "type": "footer",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 5,
                      "line": 5,
                      "offset": 75,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 5,
                      "offset": 71,
                    },
                  },
                  "type": "type",
                  "value": "Refs",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 5,
                  "offset": 75,
                },
                "start": Object {
                  "column": 10,
                  "line": 5,
                  "offset": 80,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 5,
                  "offset": 77,
                },
                "start": Object {
                  "column": 5,
                  "line": 5,
                  "offset": 75,
                },
              },
              "type": "separator",
              "value": " #",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 10,
                      "line": 5,
                      "offset": 80,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 5,
                      "offset": 77,
                    },
                  },
                  "type": "text",
                  "value": "392",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                  "offset": 80,
                },
                "start": Object {
                  "column": 7,
                  "line": 5,
                  "offset": 77,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 5,
              "offset": 80,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 71,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 5,
          "offset": 80,
        },
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 57,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 5,
      "offset": 80,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> [<text>], <newline>, <footer>* parses footer after multi-line body 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 35,
              "line": 3,
              "offset": 58,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 24,
            },
          },
          "type": "text",
          "value": "this is the first line of the body",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 59,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 59,
            },
          },
          "type": "text",
          "value": "",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 32,
              "line": 5,
              "offset": 91,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 60,
            },
          },
          "type": "text",
          "value": "this is the second line of body",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 92,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 92,
            },
          },
          "type": "text",
          "value": "",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 7,
                      "line": 7,
                      "offset": 99,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 7,
                      "offset": 93,
                    },
                  },
                  "type": "type",
                  "value": "Author",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 7,
                  "offset": 99,
                },
                "start": Object {
                  "column": 1,
                  "line": 8,
                  "offset": 107,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 7,
                  "offset": 101,
                },
                "start": Object {
                  "column": 7,
                  "line": 7,
                  "offset": 99,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 14,
                      "line": 7,
                      "offset": 106,
                    },
                    "start": Object {
                      "column": 9,
                      "line": 7,
                      "offset": 101,
                    },
                  },
                  "type": "text",
                  "value": "@bcoe",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 14,
                  "line": 7,
                  "offset": 106,
                },
                "start": Object {
                  "column": 9,
                  "line": 7,
                  "offset": 101,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 107,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 93,
            },
          },
          "type": "footer",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 5,
                      "line": 8,
                      "offset": 111,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 8,
                      "offset": 107,
                    },
                  },
                  "type": "type",
                  "value": "Refs",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 8,
                  "offset": 111,
                },
                "start": Object {
                  "column": 10,
                  "line": 8,
                  "offset": 116,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 8,
                  "offset": 113,
                },
                "start": Object {
                  "column": 5,
                  "line": 8,
                  "offset": 111,
                },
              },
              "type": "separator",
              "value": " #",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 10,
                      "line": 8,
                      "offset": 116,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 8,
                      "offset": 113,
                    },
                  },
                  "type": "text",
                  "value": "392",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 8,
                  "offset": 116,
                },
                "start": Object {
                  "column": 7,
                  "line": 8,
                  "offset": 113,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 8,
              "offset": 116,
            },
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 107,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 8,
          "offset": 116,
        },
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 59,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 8,
      "offset": 116,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> [<text>], <newline>, <footer>* parses footer after multi-line body 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "separator",
          "value": ": ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 35,
              "line": 3,
              "offset": 58,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 24,
            },
          },
          "type": "text",
          "value": "this is the first line of the body",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 59,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 59,
            },
          },
          "type": "text",
          "value": "",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 32,
              "line": 5,
              "offset": 91,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 60,
            },
          },
          "type": "text",
          "value": "this is the second line of body",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 92,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 92,
            },
          },
          "type": "text",
          "value": "",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 7,
                      "line": 7,
                      "offset": 99,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 7,
                      "offset": 93,
                    },
                  },
                  "type": "type",
                  "value": "Author",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 7,
                  "offset": 99,
                },
                "start": Object {
                  "column": 1,
                  "line": 8,
                  "offset": 107,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 9,
                  "line": 7,
                  "offset": 101,
                },
                "start": Object {
                  "column": 7,
                  "line": 7,
                  "offset": 99,
                },
              },
              "type": "separator",
              "value": ": ",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 14,
                      "line": 7,
                      "offset": 106,
                    },
                    "start": Object {
                      "column": 9,
                      "line": 7,
                      "offset": 101,
                    },
                  },
                  "type": "text",
                  "value": "@bcoe",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 14,
                  "line": 7,
                  "offset": 106,
                },
                "start": Object {
                  "column": 9,
                  "line": 7,
                  "offset": 101,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 107,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 93,
            },
          },
          "type": "footer",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 5,
                      "line": 8,
                      "offset": 111,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 8,
                      "offset": 107,
                    },
                  },
                  "type": "type",
                  "value": "Refs",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 8,
                  "offset": 111,
                },
                "start": Object {
                  "column": 10,
                  "line": 8,
                  "offset": 116,
                },
              },
              "type": "token",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 8,
                  "offset": 113,
                },
                "start": Object {
                  "column": 5,
                  "line": 8,
                  "offset": 111,
                },
              },
              "type": "separator",
              "value": " #",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 10,
                      "line": 8,
                      "offset": 116,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 8,
                      "offset": 113,
                    },
                  },
                  "type": "text",
                  "value": "392",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 8,
                  "offset": 116,
                },
                "start": Object {
                  "column": 7,
                  "line": 8,
                  "offset": 113,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 8,
              "offset": 116,
            },
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 107,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 8,
          "offset": 116,
        },
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 59,
        },
      },
      "type": "body",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 8,
      "offset": 116,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;
